# tree-sitter-veryl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-veryl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_veryl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVeryl/: veryl.h
bindings/swift/TreeSitterVerylTests/: TreeSitterVerylTests.swift
examples/: complex.veryl  counter.veryl  hello.veryl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
